# CMakeTP

./: CMakeLists.txt  README.md
A/: CMakeLists.txt  generating.py
B/: CMakeLists.txt  lib.h
C/: CMakeLists.txt  main.cpp  main.h
